Fixing tabs alignments

--- a/style/about.css
+++ b/style/about.css
@@ -370,7 +370,7 @@ body {
         margin-top: 60%;
         height: 100%;
         width: 100%;
-        padding: 10%;
+        padding-bottom: 10%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -452,7 +452,7 @@ body {
         font-size: 20px;
         width: 130px;
         height: 55px;
-        margin-top: 30%;
+        margin-top: 10%;
     }
 }
 @media screen and (min-width: 481px) {
